--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
     <header class="masthead">
       <div class="container px-4 px-lg-5 h-100">
         <div
-          class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center"
+          class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center"
         >
           <div class="col-lg-8 align-self-end">
             <h1 class="text-white font-weight-bold">
               Latvijas ilgtspējīgās transporta infrastruktūras attīstības
               asociācija
             </h1>
-            <hr class="divider" />
+            <hr class="divider text-light" />
           </div>
           <div class="col-lg-8 align-self-baseline">
             <p class="text-white-75 mb-5">
@@ -97,7 +97,7 @@
               nodrošinātu ilgtspējīgu mobilitāti un atbalstītu ekonomisko
               attīstību.
             </p>
-            <a class="btn btn-primary btn-xl" href="#about">Vairāk</a>
+            <a class="btn btn-primary btn-xl" href="#about">Lasīt Vairāk<i class="fas fa-arrow-down ms-2"></i></a>
           </div>
         </div>
       </div>
@@ -183,7 +183,7 @@
           <hr class="divider" />
         </div>
         <div class="row text-center">
-          <div class="col-lg-4">
+          <div class="col-lg-4 mb-5">
             <div class="team-member">
               <img
                 class="mx-auto rounded-circle"
@@ -212,7 +212,7 @@
               ></a>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 mb-5">
             <div class="team-member">
               <img
                 class="mx-auto rounded-circle"
@@ -241,7 +241,7 @@
               ></a>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 mb-5">
             <div class="team-member">
               <img
                 class="mx-auto rounded-circle"
