--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
       id="mainNav"
     >
       <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="#page-top">LITIAA</a>
+        <a class="navbar-brand" href="#page-top">
+          <img id="logo" class="logo-dark" width="120" src="assets/img/logo-light.svg" alt="logo" /></a>
         <button
           class="navbar-toggler navbar-toggler-right"
           type="button"
@@ -86,7 +87,7 @@
               Latvijas ilgtspējīgās transporta infrastruktūras attīstības
               asociācija
             </h1>
-            <hr class="divider text-light" />
+            <hr class="divider divider-light" />
           </div>
           <div class="col-lg-8 align-self-baseline">
             <p class="text-white-75 mb-5">
@@ -97,8 +98,10 @@
               nodrošinātu ilgtspējīgu mobilitāti un atbalstītu ekonomisko
               attīstību.
             </p>
-            <a class="btn btn-primary btn-xl" href="#about">Lasīt Vairāk<i class="fas fa-arrow-down ms-2"></i></a>
-          </div>
+            <div class="btn-group" role="group" aria-label="Basic example">
+            <a class="btn btn-primary btn-xl border border-primary" href="#contact">Kontakti<i class="fas fa-arrow-down ms-2"></i></a>
+            <a class="btn btn-outline-primary btn-xl border border-primary" href="#about">Lasīt Vairāk<i class="fas fa-arrow-down ms-2"></i></a>
+          </div></div>
         </div>
       </div>
     </header>
@@ -274,7 +277,7 @@
       </div>
     </section>
 
-<section id="contact" class="page-section bg-primary text-white">
+<section id="contact" class="page-section bg-dark text-white">
     <footer class="text-center text-lg-start">
       <!-- Section: Links  -->
       <section class="">
@@ -285,7 +288,9 @@
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
               <!-- Content -->
               <h4 class="text-uppercase fw-bold mb-4">
-                LITIAA
+                 <a class="navbar-brand" href="#page-top">
+                  <img class="logo-dark" width="120" src="assets/img/logo-red.svg" alt="logo" />
+                 </a>
               </h4>
               <p>
                  Latvijas ilgtspējīgās transporta infrastruktūras attīstības asociācija
