--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               attīstību.
             </p>
             <div class="btn-group" role="group" aria-label="Basic example">
-            <a class="btn btn-primary btn-xl border border-primary" href="#contact">Kontakti<i class="fas fa-arrow-down ms-2"></i></a>
+            <a class="btn btn-primary btn-xl border border-primary" href="#contact">Kontakti</a>
             <a class="btn btn-outline-primary btn-xl border border-primary" href="#about">Lasīt Vairāk<i class="fas fa-arrow-down ms-2"></i></a>
           </div></div>
         </div>
@@ -185,32 +185,38 @@
           <h2 class="mt-0">Amatpersonas</h2>
           <hr class="divider" />
         </div>
-        <div class="row text-center">
-          <div class="col-lg-4 mb-5">
+        <div class="row text-center gx-4 gx-lg-5 justify-content-center">
+          <div class="col-lg-5 mb-5">
             <div class="team-member">
-              <img
+              <img width="150"
                 class="mx-auto rounded-circle"
-                src="https://i.pravatar.cc/150?u=a042581f4e2902674"
+                src="../assets/img/amatpersonas/ralfs.webp"
                 alt="..."
               />
-              <h4>Parveen Anand</h4>
-              <p class="text-muted">Lead Designer</p>
+              <h4>Ralfs Nemiro</h4>
+              <p class="text-muted">Valdes priekšsēdētājs</p>
               <a
                 class="btn btn-dark btn-social mx-2"
                 href="#!"
-                aria-label="Parveen Anand Twitter Profile"
+                aria-label="Rafls Nemiro Twitter Profile"
+                rel="noreferrer"
+                target="_blank"
                 ><i class="fab fa-twitter"></i
               ></a>
               <a
                 class="btn btn-dark btn-social mx-2"
                 href="#!"
-                aria-label="Parveen Anand Facebook Profile"
+                aria-label="Rafls Nemiro Facebook Profile"
+                rel="noreferrer"
+                target="_blank"
                 ><i class="fab fa-facebook-f"></i
               ></a>
               <a
                 class="btn btn-dark btn-social mx-2"
-                href="#!"
-                aria-label="Parveen Anand LinkedIn Profile"
+                href="https://www.linkedin.com/in/ralfsnemiro/"
+                aria-label="Ralfs Nemiro LinkedIn Profile"
+                rel="noreferrer"
+                target="_blank"
                 ><i class="fab fa-linkedin-in"></i
               ></a>
             </div>
@@ -220,59 +226,36 @@
               <img
                 class="mx-auto rounded-circle"
                 src="https://i.pravatar.cc/150?u=a042581f4e2902622"
-                alt="..."
-              />
-              <h4>Diana Petersen</h4>
-              <p class="text-muted">Lead Marketer</p>
+                alt="..."/>
+              <h4>Lelde Dembovska</h4>
+              <p class="text-muted">Valdes locekle</p>
               <a
                 class="btn btn-dark btn-social mx-2"
                 href="#!"
-                aria-label="Diana Petersen Twitter Profile"
+                aria-label="Lelde Dembovska Twitter Profile"
+                rel="noreferrer"
+                target="_blank"
                 ><i class="fab fa-twitter"></i
               ></a>
               <a
                 class="btn btn-dark btn-social mx-2"
                 href="#!"
-                aria-label="Diana Petersen Facebook Profile"
+                aria-label="Lelde Dembovska Facebook Profile"
+                rel="noreferrer"
+                target="_blank"
                 ><i class="fab fa-facebook-f"></i
               ></a>
               <a
                 class="btn btn-dark btn-social mx-2"
                 href="#!"
-                aria-label="Diana Petersen LinkedIn Profile"
+                aria-label="Lelde Dembovska LinkedIn Profile"
+                rel="noreferrer"
+                target="_blank"
                 ><i class="fab fa-linkedin-in"></i
               ></a>
             </div>
           </div>
-          <div class="col-lg-4 mb-5">
-            <div class="team-member">
-              <img
-                class="mx-auto rounded-circle"
-                src="https://i.pravatar.cc/150?u=a042581f4e292"
-                alt="..."
-              />
-              <h4>Larry Parker</h4>
-              <p class="text-muted">Lead Developer</p>
-              <a
-                class="btn btn-dark btn-social mx-2"
-                href="#!"
-                aria-label="Larry Parker Twitter Profile"
-                ><i class="fab fa-twitter"></i
-              ></a>
-              <a
-                class="btn btn-dark btn-social mx-2"
-                href="#!"
-                aria-label="Larry Parker Facebook Profile"
-                ><i class="fab fa-facebook-f"></i
-              ></a>
-              <a
-                class="btn btn-dark btn-social mx-2"
-                href="#!"
-                aria-label="Larry Parker LinkedIn Profile"
-                ><i class="fab fa-linkedin-in"></i
-              ></a>
-            </div>
-          </div>
+          
         </div>
       </div>
     </section>
