fix button text

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     >
       <div class="container px-4 px-lg-5">
         <a class="navbar-brand" href="#page-top">
-          <img id="logo" class="logo-dark" width="120" src="assets/img/logo-light.svg" alt="logo" /></a>
+          <img id="logo" class="logo-dark" width="120" src="../assets/img/logo-light.svg" alt="logo" /></a>
         <button
           class="navbar-toggler navbar-toggler-right"
           type="button"
@@ -100,7 +100,7 @@
             </p>
             <div class="btn-group" role="group" aria-label="Basic example">
             <a class="btn btn-primary btn-xl border border-primary" href="#contact">Kontakti</a>
-            <a class="btn btn-outline-primary btn-xl border border-primary" href="#about">Lasīt Vairāk<i class="fas fa-arrow-down ms-2"></i></a>
+            <a class="btn btn-outline-primary btn-xl border border-primary" href="#about">Vairāk<i class="fas fa-arrow-down ms-2"></i></a>
           </div></div>
         </div>
       </div>
@@ -272,7 +272,7 @@
               <!-- Content -->
               <h4 class="text-uppercase fw-bold mb-4">
                  <a class="navbar-brand" href="#page-top">
-                  <img class="logo-dark" width="120" src="assets/img/logo-red.svg" alt="logo" />
+                  <img class="logo-dark" width="120" src="../assets/img/logo-red.svg" alt="logo" />
                  </a>
               </h4>
               <p>
