fix images not showing up

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     >
       <div class="container px-4 px-lg-5">
         <a class="navbar-brand" href="#page-top">
-          <img id="logo" class="logo-dark" width="120" src="../assets/img/logo-light.svg" alt="logo" /></a>
+          <img id="logo" class="logo-dark" width="120" src="./assets/img/logo-light.svg" alt="logo" /></a>
         <button
           class="navbar-toggler navbar-toggler-right"
           type="button"
@@ -272,7 +272,7 @@
               <!-- Content -->
               <h4 class="text-uppercase fw-bold mb-4">
                  <a class="navbar-brand" href="#page-top">
-                  <img class="logo-dark" width="120" src="../assets/img/logo-red.svg" alt="logo" />
+                  <img class="logo-dark" width="120" src="./assets/img/logo-red.svg" alt="logo" />
                  </a>
               </h4>
               <p>
