change navbar barss

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       <div class="container px-4 px-lg-5">
         <a class="navbar-brand" href="#page-top">
           LITIAA</a>
-        <button
-          class="navbar-toggler navbar-toggler-right"
+        <div
+          class="d-block d-lg-none"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarResponsive"
@@ -59,8 +59,8 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+           <i class="fas fa-bars ms-1 fs-2"></i>
+        </div>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ms-auto my-2 my-lg-0">
             <li class="nav-item">
