fix images not showing up

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <div class="team-member">
               <img width="150"
                 class="mx-auto rounded-circle"
-                src="../assets/img/amatpersonas/ralfs.webp"
+                src="./assets/img/amatpersonas/ralfs.webp"
                 alt="..."
               />
               <h4>Ralfs Nemiro</h4>
