--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
       id="mainNav"
     >
       <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="#page-top">
-          LITIAA</a>
+        <a class="navbar-brand" href="#page-top"> LITIAA</a>
         <div
           class="d-block d-lg-none"
           type="button"
@@ -59,7 +58,7 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-           <i class="fas fa-bars ms-1 fs-2"></i>
+          <i class="fas fa-bars ms-1 fs-2"></i>
         </div>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ms-auto my-2 my-lg-0">
@@ -99,9 +98,18 @@
               attīstību.
             </p>
             <div class="btn-group" role="group" aria-label="Basic example">
-            <a class="btn btn-primary btn-xl border border-primary" href="#contact">Kontakti</a>
-            <a class="btn btn-outline-primary btn-xl border border-primary" href="#about">Vairāk<i class="fas fa-arrow-down ms-2"></i></a>
-          </div></div>
+              <a
+                class="btn btn-primary btn-xl border border-primary"
+                href="#contact"
+                >Kontakti</a
+              >
+              <a
+                class="btn btn-outline-primary btn-xl border border-primary"
+                href="#about"
+                >Vairāk<i class="fas fa-arrow-down ms-2"></i
+              ></a>
+            </div>
+          </div>
         </div>
       </div>
     </header>
@@ -168,7 +176,7 @@
               <div class="mb-3 text-center">
                 <i class="fa-solid fa-handshake fs-1 text-primary"></i>
               </div>
-              <h3 class="h5 mb-3">Sadarbība un partnerības</h3>
+              <h3 class="h5 mb-3">Sadarbība un partnerības:</h3>
               <p class="text-muted mb-0">
                 Veidot stipras sadarbības un partnerības attiecības ar nozares
                 dalībniekiem.
@@ -188,7 +196,8 @@
         <div class="row text-center gx-4 gx-lg-5 justify-content-center">
           <div class="col-lg-5 mb-5">
             <div class="team-member">
-              <img width="150"
+              <img
+                width="150"
                 class="mx-auto rounded-circle"
                 src="./assets/img/amatpersonas/ralfs.webp"
                 alt="..."
@@ -226,7 +235,8 @@
               <img
                 class="mx-auto rounded-circle"
                 src="https://i.pravatar.cc/150?u=a042581f4e2902622"
-                alt="..."/>
+                alt="..."
+              />
               <h4>Lelde Dembovska</h4>
               <p class="text-muted">Valdes locekle</p>
               <a
@@ -255,63 +265,88 @@
               ></a>
             </div>
           </div>
-          
         </div>
       </div>
     </section>
 
-<section id="contact" class="page-section bg-dark text-white">
-    <footer class="text-center text-lg-start">
-      <!-- Section: Links  -->
-      <section class="">
-        <div class="container text-center text-md-start mt-5">
+    <!-- Contact-->
+    <section id="contact" class="page-section bg-light">
+      <div class="container px-4 px-lg-5">
+        <h2 class="text-center mt-0">Kontakti</h2>
+        <hr class="divider" />
+        <div class=" mt-5">
           <!-- Grid row -->
           <div class="row mt-3">
             <!-- Grid column -->
-            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+            <div class="col-md-3 mx-auto mb-4">
               <!-- Content -->
-              <h4 class="text-uppercase fw-bold mb-4">
-                 <a class="navbar-brand" href="#page-top">
+              <h4 class="text-uppercase fw-bold mb-4 h5">
+                <a class="navbar-brand" href="#page-top">
+                  <i class="fas fa-road me-2 text-primary"></i>
                   LITIAA
-                 </a>
+                </a>
               </h4>
               <p>
-                 Latvijas ilgtspējīgās transporta infrastruktūras attīstības asociācija
+                Latvijas ilgtspējīgās transporta infrastruktūras attīstības
+                asociācija
               </p>
-              <p>
-                reģ. Nr. 40008324461
-            </p>
+              <p>Reģ. Nr. 40008324461</p>
+              <p></p>
             </div>
             <!-- Grid column -->
-
+            <div class="col-md-3 mx-auto mb-4">
+              <h4 class="text-uppercase fw-bold mb-4 h5">
+                <i class="fas fa-map-marker-alt me-2 text-primary"></i>
+                Adrese
+              </h4>
+              <p>Rīga, Kārļa Ulmaņa gatve 114A</p>
+              <p class="text-primary">
+                <a
+                  class="text-decoration-none"
+                  href="https://goo.gl/maps/sxmXBhaFCKXrwJ7V8"
+                  target="_blank"
+                >
+                  Apskatīt kartē
+                  <i class="mx-2 fas fa-external-link-alt"></i>
+                </a>
+              </p>
+            </div>
             <!-- Grid column -->
-            <div class="col-md-4 col-lg-4 mx-auto mb-md-0 mb-4">
+            <div class="col-md-3 mx-auto mb-md-0 mb-4">
               <!-- Links -->
-              <h4 class="text-uppercase fw-bold mb-4">Kontakti:</h4>
+              <h4 class="h5 text-uppercase fw-bold mb-4">
+                <i class="fas fa-phone me-2 text-primary"></i> Tālrunis
+              </h4>
+
               <p>
-                <span class="text-white">Adrese: </span>
-                Rīga, Kārļa Ulmaņa gatve 114A
+                Valdes priekšsēdētājs: Ralfs Nemiro:<br />
+                <span class="text-primary">
+                  <a
+                    class="text-decoration-none fw-bolder"
+                    href="tel:+371 294 36 564"
+                    >+371 294 36 564
+                  </a>
+                </span>
               </p>
-              <p>
-                Valdes priekšsēdētājs: Ralfs Nemiro, tel: 29436564
-              </p>
-              <p>
-                Valdes locekle: Lelde Dembovska
-              </p>
+
+              <p>Valdes locekle: Lelde Dembovska: <br /></p>
             </div>
             <!-- Grid column -->
           </div>
-          <!-- Grid row -->
         </div>
-      </section>
+      </div>
+    </section>
+    <!-- Footer -->
+    <footer class="text-center text-lg-start bg-dark text-white">
       <!-- Copyright -->
       <div class="text-center p-4">
-        © 2021 Copyright:
-        <a class="text-reset fw-bold" href="#!">LITIAA</a>
+        © 2023
+        <a class="text-reset fw-bolder" href="#top">
+          <i class="fas fa-road mx-2 text-primary"></i>
+          LITIAA</a
+        >
       </div>
-      <!-- Copyright -->
     </footer>
-    <!-- Footer -->
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- SimpleLightbox plugin JS-->
