--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <div class="container px-4 px-lg-5">
         <a class="navbar-brand" href="#page-top"> LITIAA</a>
         <div
+          id="navbarToggler"
           class="d-block d-lg-none"
           type="button"
           data-bs-toggle="collapse"
@@ -82,7 +83,7 @@
           class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center"
         >
           <div class="col-lg-8 align-self-end">
-            <h1 class="text-white font-weight-bold">
+            <h1 class="text-white-75 font-weight-bold fs-1 lg-fs-resp">
               Latvijas ilgtspējīgās transporta infrastruktūras attīstības
               asociācija
             </h1>
@@ -280,12 +281,12 @@
             <!-- Grid column -->
             <div class="col-md-3 mx-auto mb-4">
               <!-- Content -->
-              <h4 class="text-uppercase fw-bold mb-4 h5">
+              <h3 class="text-uppercase fw-bold mb-4 h5">
                 <a class="navbar-brand" href="#page-top">
                   <i class="fas fa-road me-2 text-primary"></i>
                   LITIAA
                 </a>
-              </h4>
+              </h3>
               <p>
                 Latvijas ilgtspējīgās transporta infrastruktūras attīstības
                 asociācija
@@ -295,14 +296,14 @@
             </div>
             <!-- Grid column -->
             <div class="col-md-3 mx-auto mb-4">
-              <h4 class="text-uppercase fw-bold mb-4 h5">
+              <h3 class="text-uppercase fw-bold mb-4 h5">
                 <i class="fas fa-map-marker-alt me-2 text-primary"></i>
                 Adrese
-              </h4>
-              <p>Rīga, Kārļa Ulmaņa gatve 114A</p>
-              <p class="text-primary">
+              </h3>
+              <p>Rīga, Kārļa Ulmaņa gatve 114A.
+             
                 <a
-                  class="text-decoration-none"
+                  class="text-decoration-none ms-2"
                   href="https://goo.gl/maps/sxmXBhaFCKXrwJ7V8"
                   target="_blank"
                 >
@@ -314,12 +315,12 @@
             <!-- Grid column -->
             <div class="col-md-3 mx-auto mb-md-0 mb-4">
               <!-- Links -->
-              <h4 class="h5 text-uppercase fw-bold mb-4">
+              <h3 class="h5 text-uppercase fw-bold mb-4">
                 <i class="fas fa-phone me-2 text-primary"></i> Tālrunis
-              </h4>
+              </h3>
 
               <p>
-                Valdes priekšsēdētājs: Ralfs Nemiro:<br />
+                Valdes priekšsēdētājs Ralfs Nemiro:
                 <span class="text-primary">
                   <a
                     class="text-decoration-none fw-bolder"
@@ -329,7 +330,7 @@
                 </span>
               </p>
 
-              <p>Valdes locekle: Lelde Dembovska: <br /></p>
+              <p>Valdes locekle Lelde Dembovska: </p>
             </div>
             <!-- Grid column -->
           </div>
