--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
           class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center"
         >
           <div class="col-lg-8 align-self-end">
-            <h1 class="text-white-75 font-weight-bold fs-1 lg-fs-resp">
+            <h1 class="text-light font-weight-bold fs-1 lg-fs-resp">
               Latvijas ilgtspējīgās transporta infrastruktūras attīstības
               asociācija
             </h1>
             <hr class="divider divider-light" />
           </div>
           <div class="col-lg-8 align-self-baseline">
-            <p class="text-white-75 mb-5">
+            <p class="text-light mb-5">
               Mūsu misija ir veicināt ilgtspējīgu ceļu infrastruktūras
               attīstību, kas nodrošina drošu, efektīvu un videi draudzīgu
               transporta sistēmu. Mēs strādājam, lai veicinātu inovācijas,
