--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="" />
+    <meta name="description" content="Mēs strādājam, lai veicinātu inovācijas,
+              sadarbību un resursu efektivitāti ceļu infrastruktūras nozarē, lai
+              nodrošinātu ilgtspējīgu mobilitāti un atbalstītu ekonomisko
+              attīstību." />
     <meta name="author" content="" />
-    <title>LITIAA</title>
+    <title>LITIAA - Latvijas ilgtspējīgās transporta infrastruktūras attīstības
+              asociācija</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Bootstrap Icons-->
@@ -150,7 +154,7 @@
                 <i class="fa-solid fa-lightbulb fs-1 text-primary"></i>
               </div>
               <h3 class="h5 mb-3">Inovācija un tehnoloģiskā attīstība:</h3>
-              <p class="text-muted mb-0">
+              <p class="text-gray mb-0">
                 Veicināt jaunievedumus un tehnoloģisko attīstību ceļu
                 infrastruktūras nozarē, piemēram, izmantojot viedās transporta
                 sistēmas, saziņas tehnoloģijas un automatizāciju, lai uzlabotu
@@ -164,7 +168,7 @@
                 <i class="fa-brands fa-envira fs-1 text-primary"></i>
               </div>
               <h3 class="h5 mb-3">Ilgtspējīgas prakses veicināšana:</h3>
-              <p class="text-muted mb-0">
+              <p class="text-gray mb-0">
                 Aktīvi veicināt un atbalstīt ilgtspējīgas prakses ieviešanu ceļu
                 būvniecībā un uzturēšanā, kas ietver enerģijas efektivitāti,
                 atjaunojamos energoresursus, emisiju samazināšanu un vides
@@ -178,7 +182,7 @@
                 <i class="fa-solid fa-handshake fs-1 text-primary"></i>
               </div>
               <h3 class="h5 mb-3">Sadarbība un partnerības:</h3>
-              <p class="text-muted mb-0">
+              <p class="text-gray mb-0">
                 Veidot stipras sadarbības un partnerības attiecības ar nozares
                 dalībniekiem.
               </p>
@@ -206,28 +210,29 @@
               <h4>Ralfs Nemiro</h4>
               <p class="text-muted">Valdes priekšsēdētājs</p>
               <a
-                class="btn btn-dark btn-social mx-2"
+                class="link-primary mx-3"
                 href="#!"
                 aria-label="Rafls Nemiro Twitter Profile"
                 rel="noreferrer"
                 target="_blank"
-                ><i class="fab fa-twitter"></i
+                ><i class="fab fa-twitter fs-2"></i
               ></a>
               <a
-                class="btn btn-dark btn-social mx-2"
+                class="link-primary mx-3"
                 href="#!"
                 aria-label="Rafls Nemiro Facebook Profile"
                 rel="noreferrer"
                 target="_blank"
-                ><i class="fab fa-facebook-f"></i
+                ><i class="fab fa-facebook-f fs-2"></i
               ></a>
               <a
-                class="btn btn-dark btn-social mx-2"
+                class="link-primary mx-3"
                 href="https://www.linkedin.com/in/ralfsnemiro/"
                 aria-label="Ralfs Nemiro LinkedIn Profile"
                 rel="noreferrer"
                 target="_blank"
-                ><i class="fab fa-linkedin-in"></i
+                ><i class="fab fa-linkedin-in
+                fs-2"></i
               ></a>
             </div>
           </div>
@@ -241,28 +246,28 @@
               <h4>Lelde Dembovska</h4>
               <p class="text-muted">Valdes locekle</p>
               <a
-                class="btn btn-dark btn-social mx-2"
+                class="link-primary mx-3"
                 href="#!"
                 aria-label="Lelde Dembovska Twitter Profile"
                 rel="noreferrer"
                 target="_blank"
-                ><i class="fab fa-twitter"></i
+                ><i class="fab fa-twitter fs-2"></i
               ></a>
               <a
-                class="btn btn-dark btn-social mx-2"
+                class="link-primary mx-3"
                 href="#!"
                 aria-label="Lelde Dembovska Facebook Profile"
                 rel="noreferrer"
                 target="_blank"
-                ><i class="fab fa-facebook-f"></i
+                ><i class="fab fa-facebook-f fs-2"></i
               ></a>
               <a
-                class="btn btn-dark btn-social mx-2"
+                class="link-primary mx-3"
                 href="#!"
                 aria-label="Lelde Dembovska LinkedIn Profile"
                 rel="noreferrer"
                 target="_blank"
-                ><i class="fab fa-linkedin-in"></i
+                ><i class="fab fa-linkedin-in fs-2"></i
               ></a>
             </div>
           </div>
@@ -281,7 +286,7 @@
             <!-- Grid column -->
             <div class="col-md-3 mx-auto mb-4">
               <!-- Content -->
-              <h3 class="text-uppercase fw-bold mb-4 h5">
+              <h3 class="mb-4 h4">
                 <a class="navbar-brand" href="#page-top">
                   <i class="fas fa-road me-2 text-primary"></i>
                   LITIAA
@@ -296,7 +301,7 @@
             </div>
             <!-- Grid column -->
             <div class="col-md-3 mx-auto mb-4">
-              <h3 class="text-uppercase fw-bold mb-4 h5">
+              <h3 class="mb-4 h4">
                 <i class="fas fa-map-marker-alt me-2 text-primary"></i>
                 Adrese
               </h3>
@@ -315,7 +320,7 @@
             <!-- Grid column -->
             <div class="col-md-3 mx-auto mb-md-0 mb-4">
               <!-- Links -->
-              <h3 class="h5 text-uppercase fw-bold mb-4">
+              <h3 class="h4 mb-4">
                 <i class="fas fa-phone me-2 text-primary"></i> Tālrunis
               </h3>
 
