--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
               <a class="nav-link" href="#services">Mērķi</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#team">Amatpersonas</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#contact">Kontakti</a>
             </li>
           </ul>
@@ -192,7 +195,7 @@
       </div>
     </section>
     <!-- Team-->
-    <section class="page-section" id="team">
+    <section id="team" class="page-section" id="team">
       <div class="container px-4 px-lg-5">
         <div class="text-center">
           <h2 class="mt-0">Amatpersonas</h2>
