--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <body id="page-top">
     <!-- Navigation-->
     <nav
-      class="navbar navbar-expand-lg navbar-light fixed-top py-3"
+      class="navbar navbar-expand-lg fixed-top py-3"
       id="mainNav"
     >
       <div class="container px-4 px-lg-5">
@@ -66,17 +66,17 @@
           <i class="fas fa-bars ms-1 fs-2"></i>
         </div>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ms-auto my-2 my-lg-0">
-            <li class="nav-item">
+          <ul class="navbar-nav ms-auto my-2 my-lg-0 ">
+            <li class="nav-item pb-3 pb-lg-0">
               <a class="nav-link" href="#about">vīzija</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item pb-3 pb-lg-0">
               <a class="nav-link" href="#services">Mērķi</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item pb-3 pb-lg-0">
               <a class="nav-link" href="#team">Amatpersonas</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item pb-3 pb-lg-0">
               <a class="nav-link" href="#contact">Kontakti</a>
             </li>
           </ul>
@@ -125,10 +125,10 @@
     <section class="page-section" id="about">
       <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
-          <div class="col-lg-8 text-center">
-            <h2 class="mt-0">Mūsu vīzija</h2>
+          <div class="col-lg-8">
+            <h2 class="mt-0 text-center">Mūsu vīzija</h2>
             <hr class="divider" />
-            <p class="mb-4 text-start">
+            <p class="mb-4">
               Mūsu vīzija ir radīt nākotnesorientētu un ilgtspējīgu ceļu
               infrastruktūru, kas nodrošina drošu un efektīvu transportu,
               atbilstoši augstiem kvalitātes standartiem un vides aizsardzības
