--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <a class="navbar-brand" href="#page-top"> LITIAA</a>
         <div
           id="navbarToggler"
-          class="d-block d-lg-none"
+          class="d-block d-lg-none p-0"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarResponsive"
@@ -63,20 +63,20 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <i class="fas fa-bars ms-1 fs-2"></i>
+          <i class="fas fa-bars fs-1"></i>
         </div>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ms-auto my-2 my-lg-0 ">
-            <li class="nav-item pb-3 pb-lg-0">
+            <li class="nav-item py-3 pb-lg-0">
               <a class="nav-link" href="#about">vīzija</a>
             </li>
-            <li class="nav-item pb-3 pb-lg-0">
+            <li class="nav-item py-3 pb-lg-0">
               <a class="nav-link" href="#services">Mērķi</a>
             </li>
-            <li class="nav-item pb-3 pb-lg-0">
+            <li class="nav-item py-3 pb-lg-0">
               <a class="nav-link" href="#team">Amatpersonas</a>
             </li>
-            <li class="nav-item pb-3 pb-lg-0">
+            <li class="nav-item py-3 pb-lg-0">
               <a class="nav-link" href="#contact">Kontakti</a>
             </li>
           </ul>
