--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ms-auto my-2 my-lg-0 ">
-            <li class="nav-item py-3 pb-lg-0">
+            <li class="nav-item py-3 py-lg-0">
               <a class="nav-link" href="#about">vīzija</a>
             </li>
-            <li class="nav-item py-3 pb-lg-0">
+            <li class="nav-item py-3 py-lg-0">
               <a class="nav-link" href="#services">Mērķi</a>
             </li>
-            <li class="nav-item py-3 pb-lg-0">
+            <li class="nav-item py-3 py-lg-0">
               <a class="nav-link" href="#team">Amatpersonas</a>
             </li>
-            <li class="nav-item py-3 pb-lg-0">
+            <li class="nav-item py-3 py-lg-0">
               <a class="nav-link" href="#contact">Kontakti</a>
             </li>
           </ul>
