--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </div>
     </header>
     <!-- About-->
-    <section class="page-section" id="about">
+    <section class="page-section pb-0" id="about">
       <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-lg-8">
@@ -146,7 +146,7 @@
       </div>
     </section>
     <!-- Services-->
-    <section class="page-section bg-light py-4" id="services">
+    <section class="page-section bg-light" id="services">
       <div class="container px-4 px-lg-5">
         <h2 class="text-center mt-0">Stratēģiskie mērķi</h2>
         <hr class="divider" />
@@ -195,7 +195,7 @@
       </div>
     </section>
     <!-- Team-->
-    <section id="team" class="page-section py-4" id="team">
+    <section id="team" class="page-section py-0" id="team">
       <div class="container px-4 px-lg-5">
         <div class="text-center">
           <h2 class="mt-0">Amatpersonas</h2>
@@ -279,7 +279,7 @@
     </section>
 
     <!-- Contact-->
-    <section id="contact" class="page-section bg-light pt-4">
+    <section id="contact" class="page-section bg-light">
       <div class="container px-4 px-lg-5">
         <h2 class="text-center mt-0">Kontakti</h2>
         <hr class="divider" />
