--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </div>
     </header>
     <!-- About-->
-    <section class="page-section pb-0" id="about">
+    <section class="page-section" id="about">
       <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-lg-8">
@@ -195,7 +195,7 @@
       </div>
     </section>
     <!-- Team-->
-    <section id="team" class="page-section py-0" id="team">
+    <section id="team" class="page-section road" id="team">
       <div class="container px-4 px-lg-5">
         <div class="text-center">
           <h2 class="mt-0">Amatpersonas</h2>
