--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <i class="fas fa-bars fs-1"></i>
         </div>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ms-auto my-2 my-lg-0 ">
+          <ul class="navbar-nav ms-auto my-2 my-lg-0 align-items-center">
             <li class="nav-item py-3 py-lg-0">
               <a class="nav-link" href="#about">vīzija</a>
             </li>
@@ -77,7 +77,7 @@
               <a class="nav-link" href="#team">Amatpersonas</a>
             </li>
             <li class="nav-item py-3 py-lg-0">
-              <a class="nav-link" href="#contact">Kontakti</a>
+              <a class="btn btn-primary btn-xl border border-secondary rounded-pill" href="#contact">Kontakti</a>
             </li>
           </ul>
         </div>
@@ -90,14 +90,14 @@
           class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center"
         >
           <div class="col-lg-8 align-self-end">
-            <h1 class="text-light font-weight-bold fs-1 lg-fs-resp">
+            <h1 class="text-white-75 font-weight-bold fs-1 lg-fs-resp">
               Latvijas ilgtspējīgās transporta infrastruktūras attīstības
               asociācija
             </h1>
-            <hr class="divider divider-light" />
+            <hr class="divider divider-secondary" />
           </div>
           <div class="col-lg-8 align-self-baseline">
-            <p class="text-light mb-5">
+            <p class="text-white-75 mb-5">
               Mūsu misija ir veicināt ilgtspējīgu ceļu infrastruktūras
               attīstību, kas nodrošina drošu, efektīvu un videi draudzīgu
               transporta sistēmu. Mēs strādājam, lai veicinātu inovācijas,
@@ -107,12 +107,12 @@
             </p>
             <div class="btn-group" role="group" aria-label="Basic example">
               <a
-                class="btn btn-primary btn-xl border border-primary"
+                class="btn btn-primary btn-xl border border-secondary"
                 href="#contact"
                 >Kontakti</a
               >
               <a
-                class="btn btn-outline-primary btn-xl border border-primary"
+                class="btn btn-outline-primary btn-xl border border-secondary"
                 href="#about"
                 >Vairāk<i class="fas fa-arrow-down ms-2"></i
               ></a>
@@ -122,7 +122,7 @@
       </div>
     </header>
     <!-- About-->
-    <section class="page-section" id="about">
+    <section class="page-section road" id="about">
       <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-lg-8">
@@ -154,7 +154,7 @@
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="h-100">
               <div class="mb-3 text-center">
-                <i class="fa-solid fa-lightbulb fs-1 text-primary"></i>
+                <i class="fa-solid fa-lightbulb fs-1 text-secondary"></i>
               </div>
               <h3 class="h5 mb-3">Inovācija un tehnoloģiskā attīstība:</h3>
               <p class="text-gray mb-0">
@@ -168,7 +168,7 @@
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="h-100">
               <div class="mb-3 text-center">
-                <i class="fa-brands fa-envira fs-1 text-primary"></i>
+                <i class="fa-brands fa-envira fs-1 text-secondary"></i>
               </div>
               <h3 class="h5 mb-3">Ilgtspējīgas prakses veicināšana:</h3>
               <p class="text-gray mb-0">
@@ -182,7 +182,7 @@
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="h-100">
               <div class="mb-3 text-center">
-                <i class="fa-solid fa-handshake fs-1 text-primary"></i>
+                <i class="fa-solid fa-handshake fs-1 text-secondary"></i>
               </div>
               <h3 class="h5 mb-3">Sadarbība un partnerības:</h3>
               <p class="text-gray mb-0">
@@ -279,19 +279,19 @@
     </section>
 
     <!-- Contact-->
-    <section id="contact" class="page-section bg-light">
+    <section id="contact" class="page-section bg-light bg-dark">
       <div class="container px-4 px-lg-5">
-        <h2 class="text-center mt-0">Kontakti</h2>
+        <h2 class="text-center mt-0 text-white-75">Kontakti</h2>
         <hr class="divider" />
         <div class=" mt-5">
           <!-- Grid row -->
-          <div class="row mt-3">
+          <div class="row mt-3 text-white-75">
             <!-- Grid column -->
             <div class="col-md-3 mx-auto mb-4">
               <!-- Content -->
               <h3 class="mb-4 h4">
                 <a class="navbar-brand" href="#page-top">
-                  <i class="fas fa-road me-2 text-primary"></i>
+                  <i class="fas fa-road me-2 text-secondary"></i>
                   LITIAA
                 </a>
               </h3>
@@ -305,13 +305,13 @@
             <!-- Grid column -->
             <div class="col-md-3 mx-auto mb-4">
               <h3 class="mb-4 h4">
-                <i class="fas fa-map-marker-alt me-2 text-primary"></i>
+                <i class="fas fa-map-marker-alt me-2 text-secondary"></i>
                 Adrese
               </h3>
               <p>Rīga, Kārļa Ulmaņa gatve 114A.
              
                 <a
-                  class="text-decoration-none ms-2"
+                  class="text-decoration-none"
                   href="https://goo.gl/maps/sxmXBhaFCKXrwJ7V8"
                   target="_blank"
                 >
@@ -324,14 +324,14 @@
             <div class="col-md-3 mx-auto mb-md-0 mb-4">
               <!-- Links -->
               <h3 class="h4 mb-4">
-                <i class="fas fa-phone me-2 text-primary"></i> Tālrunis
+                <i class="fas fa-phone me-2 text-secondary"></i> Tālrunis
               </h3>
 
               <p>
                 Valdes priekšsēdētājs Ralfs Nemiro:
                 <span class="text-primary">
                   <a
-                    class="text-decoration-none fw-bolder"
+                    class="text-decoration-none fs-4"
                     href="tel:+371 294 36 564"
                     >+371 294 36 564
                   </a>
@@ -346,11 +346,11 @@
       </div>
     </section>
     <!-- Footer -->
-    <footer class="text-center text-lg-start bg-dark text-white">
+    <footer class="text-center text-lg-start bg-secondary text-white">
       <!-- Copyright -->
       <div class="text-center p-4">
         © 2023
-        <a class="text-reset fw-bolder" href="#top">
+        <a class="text-reset fw-bolder" href="#page-top">
           <i class="fas fa-road mx-2 text-primary"></i>
           LITIAA</a
         >
