--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 width="150"
                 class="mx-auto rounded-circle"
                 src="./assets/img/amatpersonas/ralfs.webp"
-                alt="..."
+                alt="Ralfs Nemiro"
               />
               <h4>Ralfs Nemiro</h4>
               <p class="text-muted">Valdes priekšsēdētājs</p>
@@ -244,7 +244,7 @@
               <img
                 class="mx-auto rounded-circle"
                 src="https://i.pravatar.cc/150?u=a042581f4e2902622"
-                alt="..."
+                alt="Lelde Dembovska"
               />
               <h4>Lelde Dembovska</h4>
               <p class="text-muted">Valdes locekle</p>
@@ -281,7 +281,7 @@
     <!-- Contact-->
     <section id="contact" class="page-section bg-light bg-dark">
       <div class="container px-4 px-lg-5">
-        <h2 class="text-center mt-0 text-white-75">Kontakti</h2>
+        <h2 class="text-center mt-0 text-white-50">Kontakti</h2>
         <hr class="divider" />
         <div class=" mt-5">
           <!-- Grid row -->
@@ -291,13 +291,12 @@
               <!-- Content -->
               <h3 class="mb-4 h4">
                 <a class="navbar-brand" href="#page-top">
-                  <i class="fas fa-road me-2 text-secondary"></i>
+                  <i class="fas fa-road me-2"></i>
                   LITIAA
                 </a>
               </h3>
               <p>
-                Latvijas ilgtspējīgās transporta infrastruktūras attīstības
-                asociācija
+                Latvijas ilgtspējīgās transporta infrastruktūras attīstības asociācija
               </p>
               <p>Reģ. Nr. 40008324461</p>
               <p></p>
@@ -305,33 +304,34 @@
             <!-- Grid column -->
             <div class="col-md-3 mx-auto mb-4">
               <h3 class="mb-4 h4">
-                <i class="fas fa-map-marker-alt me-2 text-secondary"></i>
+                <i class="fas fa-map-marker-alt me-2 fs-3"></i>
                 Adrese
               </h3>
-              <p>Rīga, Kārļa Ulmaņa gatve 114A.
-             
+              <p>Rīga, Kārļa Ulmaņa gatve 114A.</p> 
+             <p	>                                                                                                                                                                                                               
                 <a
-                  class="text-decoration-none"
+                  class="text-decoration-none link-light"
                   href="https://goo.gl/maps/sxmXBhaFCKXrwJ7V8"
                   target="_blank"
-                >
+                > 
                   Apskatīt kartē
-                  <i class="mx-2 fas fa-external-link-alt"></i>
+                  <i class="mx-2 fas fa-external-link-alt text-secondary fs-4"></i>
                 </a>
+
               </p>
             </div>
             <!-- Grid column -->
             <div class="col-md-3 mx-auto mb-md-0 mb-4">
               <!-- Links -->
               <h3 class="h4 mb-4">
-                <i class="fas fa-phone me-2 text-secondary"></i> Tālrunis
+                <i class="fas fa-phone me-2"></i> Tālrunis
               </h3>
 
               <p>
                 Valdes priekšsēdētājs Ralfs Nemiro:
                 <span class="text-primary">
                   <a
-                    class="text-decoration-none fs-4"
+                    class="text-decoration-none fs-5 text-nowrap"
                     href="tel:+371 294 36 564"
                     >+371 294 36 564
                   </a>
