--- a/index.html
+++ b/index.html
@@ -346,12 +346,12 @@
       </div>
     </section>
     <!-- Footer -->
-    <footer class="text-center text-lg-start bg-secondary text-white">
+    <footer class="text-center text-lg-start bg-secondary text-white-75">
       <!-- Copyright -->
       <div class="text-center p-4">
         © 2023
-        <a class="text-reset fw-bolder" href="#page-top">
-          <i class="fas fa-road mx-2 text-primary"></i>
+        <a class="text-reset fw-bolder text-decoration-none" href="#page-top">
+          <i class="fas fa-road mx-1 text-white-75"></i>
           LITIAA</a
         >
       </div>
