--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <header class="masthead">
       <div class="container px-4 px-lg-5 h-100">
         <div
-          class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center"
+          class="row gx-4 gx-lg-5 h-100 align-items-lft justify-content-center"
         >
           <div class="col-lg-8 align-self-end">
             <h1 class="text-white-75 font-weight-bold fs-1 lg-fs-resp">
@@ -279,9 +279,18 @@
     </section>
 
     <!-- Contact-->
-    <section id="contact" class="page-section bg-light bg-dark">
+    <section id="contact" class="page-section bg-dark position-relative">
+      <div class="roadmarks roadmark-top">
+        <img src="./assets/img/roadmark.svg" alt="Roadmarks" />
+      </div>
+      <div class="roadmarks roadmarks-double">
+        <img src="./assets/img/roadmarks.svg" alt="Roadmarks" />
+      </div>
+      <div class="roadmarks roadmark-bottom">
+        <img src="./assets/img/roadmark.svg" alt="Roadmarks" />
+      </div>
       <div class="container px-4 px-lg-5">
-        <h2 class="text-center mt-0 text-white-50">Kontakti</h2>
+        <h2 class="text-center mt-0 text-white-75">Kontakti</h2>
         <hr class="divider" />
         <div class=" mt-5">
           <!-- Grid row -->
@@ -327,7 +336,7 @@
                 <i class="fas fa-phone me-2"></i> Tālrunis
               </h3>
 
-              <p>
+              <p class="text-white50">
                 Valdes priekšsēdētājs Ralfs Nemiro:
                 <span class="text-primary">
                   <a
