--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ms-auto my-2 my-lg-0 align-items-center">
             <li class="nav-item py-3 py-lg-0">
-              <a class="nav-link" href="#about">vīzija</a>
+              <a class="nav-link" href="#about">Vīzija</a>
             </li>
             <li class="nav-item py-3 py-lg-0">
               <a class="nav-link" href="#services">Mērķi</a>
