--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
           class="row gx-4 gx-lg-5 h-100 align-items-lft justify-content-center"
         >
           <div class="col-lg-8 align-self-end">
-            <h1 class="text-white-75 font-weight-bold fs-1 lg-fs-resp">
+            <h1 class="text-white-75 fw-bolder fs-1 lg-fs-resp">
+              <span class="text-secondary fw-bolder">LITIAA</span> -
               Latvijas ilgtspējīgās transporta infrastruktūras attīstības
               asociācija
             </h1>
