add monospace for nimbers

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
               <p>
                 Latvijas ilgtspējīgās transporta infrastruktūras attīstības asociācija
               </p>
-              <p>Reģ. Nr. 40008324461</p>
+              <p>Reģ. Nr. <span class="font-monospace fs-5">40008324461</span></p>
               <p></p>
             </div>
             <!-- Grid column -->
@@ -339,9 +339,9 @@
 
               <p class="text-white50">
                 Valdes priekšsēdētājs Ralfs Nemiro:
-                <span class="text-primary">
+                <span class="text-primary font-monospace">
                   <a
-                    class="text-decoration-none fs-5 text-nowrap"
+                    class="text-decoration-none fs-4 text-nowrap"
                     href="tel:+371 294 36 564"
                     >+371 294 36 564
                   </a>
