add monospace for nimbers

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <a class="nav-link" href="#team">Amatpersonas</a>
             </li>
             <li class="nav-item py-3 py-lg-0">
-              <a class="btn btn-primary btn-xl border border-secondary rounded-pill" href="#contact">Kontakti</a>
+              <a class="btn btn-primary btn-lg fs-6 rounded-pill" href="#contact">Kontakti</a>
             </li>
           </ul>
         </div>
