--- a/index.html
+++ b/index.html
@@ -208,14 +208,14 @@
               <img
                 width="150"
                 class="mx-auto rounded-circle"
-                src="./assets/img/amatpersonas/ralfs.webp"
+                src="./assets/img/amatpersonas/ralfs_nemiro.webp"
                 alt="Ralfs Nemiro"
               />
               <h4>Ralfs Nemiro</h4>
               <p class="text-muted">Valdes priekšsēdētājs</p>
               <a
                 class="link-primary mx-3"
-                href="#!"
+                href="https://twitter.com/ralfsnemiro"
                 aria-label="Rafls Nemiro Twitter Profile"
                 rel="noreferrer"
                 target="_blank"
@@ -223,7 +223,7 @@
               ></a>
               <a
                 class="link-primary mx-3"
-                href="#!"
+                href="https://www.facebook.com/ralfsnemiro"
                 aria-label="Rafls Nemiro Facebook Profile"
                 rel="noreferrer"
                 target="_blank"
@@ -243,36 +243,37 @@
           <div class="col-lg-4 mb-5">
             <div class="team-member">
               <img
+                width="150"
                 class="mx-auto rounded-circle"
-                src="https://i.pravatar.cc/150?u=a042581f4e2902622"
+                src="./assets/img/amatpersonas/lelde_dembrovska.webp"
                 alt="Lelde Dembovska"
               />
               <h4>Lelde Dembovska</h4>
               <p class="text-muted">Valdes locekle</p>
-              <a
+              <!-- <a
                 class="link-primary mx-3"
                 href="#!"
                 aria-label="Lelde Dembovska Twitter Profile"
                 rel="noreferrer"
                 target="_blank"
                 ><i class="fab fa-twitter fs-2"></i
-              ></a>
+              ></a> -->
               <a
                 class="link-primary mx-3"
-                href="#!"
+                href="https://www.facebook.com/lelde.dembovska"
                 aria-label="Lelde Dembovska Facebook Profile"
                 rel="noreferrer"
                 target="_blank"
                 ><i class="fab fa-facebook-f fs-2"></i
               ></a>
-              <a
+              <!-- <a
                 class="link-primary mx-3"
                 href="#!"
                 aria-label="Lelde Dembovska LinkedIn Profile"
                 rel="noreferrer"
                 target="_blank"
                 ><i class="fab fa-linkedin-in fs-2"></i
-              ></a>
+              ></a> -->
             </div>
           </div>
         </div>
@@ -348,7 +349,6 @@
                 </span>
               </p>
 
-              <p>Valdes locekle Lelde Dembovska: </p>
             </div>
             <!-- Grid column -->
           </div>
