--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <div class="col-lg-8">
             <h2 class="mt-0 text-center">Mūsu vīzija</h2>
             <hr class="divider" />
-            <p class="mb-4">
+            <p class="mb-4 text-black">
               Mūsu vīzija ir radīt nākotnesorientētu un ilgtspējīgu ceļu
               infrastruktūru, kas nodrošina drošu un efektīvu transportu,
               atbilstoši augstiem kvalitātes standartiem un vides aizsardzības
@@ -158,7 +158,7 @@
                 <i class="fa-solid fa-lightbulb fs-1 text-secondary"></i>
               </div>
               <h3 class="h5 mb-3">Inovācija un tehnoloģiskā attīstība:</h3>
-              <p class="text-gray mb-0">
+              <p class="text-black mb-0">
                 Veicināt jaunievedumus un tehnoloģisko attīstību ceļu
                 infrastruktūras nozarē, piemēram, izmantojot viedās transporta
                 sistēmas, saziņas tehnoloģijas un automatizāciju, lai uzlabotu
@@ -172,7 +172,7 @@
                 <i class="fa-brands fa-envira fs-1 text-secondary"></i>
               </div>
               <h3 class="h5 mb-3">Ilgtspējīgas prakses veicināšana:</h3>
-              <p class="text-gray mb-0">
+              <p class="text-black mb-0">
                 Aktīvi veicināt un atbalstīt ilgtspējīgas prakses ieviešanu ceļu
                 būvniecībā un uzturēšanā, kas ietver enerģijas efektivitāti,
                 atjaunojamos energoresursus, emisiju samazināšanu un vides
@@ -186,7 +186,7 @@
                 <i class="fa-solid fa-handshake fs-1 text-secondary"></i>
               </div>
               <h3 class="h5 mb-3">Sadarbība un partnerības:</h3>
-              <p class="text-gray mb-0">
+              <p class="text-black mb-0">
                 Veidot stipras sadarbības un partnerības attiecības ar nozares
                 dalībniekiem.
               </p>
