--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="lv">
   <head>
     <meta charset="utf-8" />
     <meta
@@ -292,8 +292,6 @@
         <img src="./assets/img/roadmark.svg" alt="Roadmarks" />
       </div>
       <div class="container px-4 px-lg-5">
-        <h2 class="text-center mt-0 text-white-75">Kontakti</h2>
-        <hr class="divider" />
         <div class=" mt-5">
           <!-- Grid row -->
           <div class="row mt-3 text-white-75">
@@ -302,7 +300,7 @@
               <!-- Content -->
               <h3 class="mb-4 h4">
                 <a class="navbar-brand" href="#page-top">
-                  <i class="fas fa-road me-2"></i>
+                  
                   LITIAA
                 </a>
               </h3>
@@ -315,10 +313,10 @@
             <!-- Grid column -->
             <div class="col-md-3 mx-auto mb-4">
               <h3 class="mb-4 h4">
-                <i class="fas fa-map-marker-alt me-2 fs-3"></i>
+                
                 Adrese
               </h3>
-              <p>Rīga, Kārļa Ulmaņa gatve 114A.</p> 
+              <p><i class="fas fa-map-marker-alt me-2 fs-3"></i> Rīga, Kārļa Ulmaņa gatve 114A.</p> 
              <p	>                                                                                                                                                                                                               
                 <a
                   class="text-decoration-none link-light"
@@ -326,7 +324,7 @@
                   target="_blank"
                 > 
                   Apskatīt kartē
-                  <i class="mx-2 fas fa-external-link-alt text-secondary fs-4"></i>
+                  <i class="mx-2 fas fa-external-link-alt text-secondary fs-5"></i>
                 </a>
 
               </p>
@@ -335,19 +333,27 @@
             <div class="col-md-3 mx-auto mb-md-0 mb-4">
               <!-- Links -->
               <h3 class="h4 mb-4">
-                <i class="fas fa-phone me-2"></i> Tālrunis
+                <i class="fas fa-envelope me-2 fs-3"></i> Kontakti
               </h3>
 
               <p class="text-white50">
                 Valdes priekšsēdētājs Ralfs Nemiro:
                 <span class="text-primary font-monospace">
                   <a
-                    class="text-decoration-none fs-4 text-nowrap"
+                    class="text-decoration-none fs-5 text-nowrap"
                     href="tel:+371 294 36 564"
-                    >+371 294 36 564
+                    ><i class="fas fa-phone me-2"></i> +371 294 36 564
                   </a>
                 </span>
               </p>
+              <p class="text-white50">
+                <span class="text-primary font-monospace">
+                  <a
+                    class="text-decoration-none fs-5 text-nowrap"
+                    href="mailto:info@litiaa.lv"
+                    ><i class="fas fa-envelope me-2"></i> info@litiaa.lv
+                  </a>
+                </span>
 
             </div>
             <!-- Grid column -->
@@ -361,7 +367,6 @@
       <div class="text-center p-4">
         © 2023
         <a class="text-reset fw-bolder text-decoration-none" href="#page-top">
-          <i class="fas fa-road mx-1 text-white-75"></i>
           LITIAA</a
         >
       </div>
