--- a/index.html
+++ b/index.html
@@ -28,15 +28,9 @@
       referrerpolicy="no-referrer"
     />
     <!-- Google fonts-->
-    <link
-      href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
-      rel="stylesheet"
-      type="text/css"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kodchasan:wght@200;300;400;500&family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
     <!-- SimpleLightbox plugin CSS-->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css"
@@ -52,7 +46,15 @@
       id="mainNav"
     >
       <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="#page-top">LITIAA</a>
+        <a class="navbar-brand" href="#page-top">
+          <img
+            src="./assets/img/logo.webp"
+            alt="LITIAA Logo"
+            width="60"
+            height="auto"
+          />
+          LITIAA
+        </a>
         <div
           id="navbarToggler"
           class="d-block d-lg-none p-0"
@@ -91,7 +93,7 @@
         >
           <div class="col-lg-8 align-self-end">
             <h1 class="text-white-75 fw-bolder fs-1 lg-fs-resp">
-              <span class="text-secondary fw-bolder">LITIAA</span> -
+              <span class="text-secondary">LITIAA</span> -
               Latvijas ilgtspējīgās transporta infrastruktūras attīstības
               asociācija
             </h1>
