--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         >
           <div class="col-lg-8 align-self-end">
             <h1 class="text-white-75 fw-bolder fs-1 lg-fs-resp">
-              <span class="text-secondary">LITIAA</span> - Latvijas ilgtspējīgās
+              <span class="text-secondary letter-spaceing">LITIAA</span> - Latvijas ilgtspējīgās
               transporta infrastruktūras attīstības asociācija
             </h1>
             <hr class="divider divider-secondary" />
