--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
         >
           <div class="col-lg-8 align-self-end">
             <h1 class="text-white-75 fw-bolder fs-1 lg-fs-resp">
-              <span class="text-secondary letter-spaceing">LITIAA</span> - Latvijas ilgtspējīgās
-              transporta infrastruktūras attīstības asociācija
+              <span class="text-secondary letter-spaceing">LITIAA</span> -
+              Latvijas ilgtspējīgās transporta infrastruktūras attīstības
+              asociācija
             </h1>
             <hr class="divider divider-secondary" />
           </div>
@@ -305,9 +306,74 @@
         <img src="./assets/img/roadmark.svg" alt="Roadmarks" />
       </div>
       <div class="container px-4 px-lg-5">
-        <div class="mt-5">
+        <div class="">
+          <div class="text-center">
+            <h2 class="mt-0 text-white-75">Kontakti</h2>
+            <hr class="divider" />
+            <p class="text-white-75 mb-5">
+              Lai sazinātos ar mums, lūdzu, aizpildiet zemāk esošo formu.
+            </p>
+          </div>
+          <div class="contact-form-whapper position-relative pb-5">
+            <form
+              id="contactForm"
+              method="post"
+              action="https://systeme.io/embedded/11793878/subscription"
+              class="contact-form position-relative needs-validation form-floating"
+              novalidate
+            >
+              <div class="form-floating mb-3">
+                <input
+                  name="first_name"
+                  type="text"
+                  class="form-control"
+                  id="floatingInput"
+                  placeholder="Vārds"
+                  required
+                />
+                <label for="floatingInput">Vārds</label>
+                <div class="invalid-feedback">Lūdzu ievadiet savu vārdu.</div>
+              </div>
+              <div class="form-floating mb-3">
+                <input
+                  name="email"
+                  type="email"
+                  class="form-control"
+                  id="floatingInput"
+                  placeholder="name@example.com"
+                  required
+                />
+                <label for="floatingInput">E-pasts</label>
+                <div class="invalid-feedback">
+                  Lūdzu ievadiet savu e-pasta adresi.
+                </div>
+              </div>
+              <div class="form-floating mb-3">
+                <textarea
+                  name="text_field"
+                  class="form-control"
+                  placeholder="Leave a comment here"
+                  id="floatingTextarea2"
+                  style="height: 100px"
+                  required
+                ></textarea>
+                <label for="floatingTextarea2">Komentārs</label>
+                <div class="invalid-feedback">
+                  Lūdzu ievadiet savu komentāru.
+                </div>
+              </div>
+              <div id="recaptcha" class="CaptchaUi-sc-1o4ez0w-0 gbvxpe g-recaptcha mb-3" data-sitekey="6LfuftAoAAAAAA7SiEymYkaCfcWT98ElXZ8T-bUC" data-callback="onSubmit" data-theme="light"><div style="width: 304px; height: 78px;"><div><iframe title="reCAPTCHA" width="304" height="78" role="presentation" name="a-5p282xkq3lfq" frameborder="0" scrolling="no" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation allow-modals allow-popups-to-escape-sandbox allow-storage-access-by-user-activation" src="https://www.google.com/recaptcha/api2/anchor?ar=1&amp;k=6LfuftAoAAAAAA7SiEymYkaCfcWT98ElXZ8T-bUC&amp;co=aHR0cHM6Ly9kNTMzLWluZm8uc3lzdGVtZS5pbzo0NDM.&amp;hl=en&amp;v=vm_YDiq1BiI3a8zfbIPZjtF2&amp;theme=light&amp;size=normal&amp;cb=72iwd3p2vw7t"></iframe></div><textarea id="g-recaptcha-response" name="g-recaptcha-response" class="g-recaptcha-response" style="width: 250px; height: 40px; border: 1px solid rgb(193, 193, 193); margin: 10px 25px; padding: 0px; resize: none; display: none;"></textarea></div><iframe style="display: none;"></iframe></div>
+              <div class="f-row">
+                <button type="submit" class="btn btn-primary btn-xl" id="btn">
+                  <i class="fas fa-paper-plane me-2"></i> Nosūtīt
+                  
+                </button>
+              </div>
+            </form>
+          </div>
+
           <!-- Grid row -->
-          <div class="row mt-3 text-white-75">
+          <div class="row mt-5 pt-5 text-white-75">
             <!-- Grid column -->
             <div class="col-md-3 mx-auto mb-4">
               <!-- Content -->
