--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             <h2 class="mt-0 text-white-75">Kontakti</h2>
             <hr class="divider" />
             <p class="text-white-75 mb-5">
-              Lai sazinātos ar mums, lūdzu, aizpildiet zemāk esošo formu.
+              Lai sazinātos ar mums, lūdzu, aizpildiet zemāk esošo saziņas veidlapu.
             </p>
           </div>
           <div class="contact-form-whapper position-relative pb-5">
