--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
             </p>
           </div>
           <div class="contact-form-whapper position-relative pb-5">
+
             <form
               id="contactForm"
               method="post"
@@ -355,6 +356,7 @@
                   placeholder="Leave a comment here"
                   id="floatingTextarea2"
                   style="height: 100px"
+                  maxlength="250"
                   required
                 ></textarea>
                 <label for="floatingTextarea2">Komentārs</label>
