--- a/paldies.html
+++ b/paldies.html
@@ -103,7 +103,7 @@
           <div class="col-lg-8 align-self-end">
             <h1 class="text-white-75 fw-bolder fs-1 lg-fs-resp">
               <span class="text-secondary letter-spaceing">LITIAA</span> -
-              Paldies par jūsu iesniegumu!
+              Paldies, ka sazinājāties ar mums!
             </h1>
             <hr class="divider divider-secondary" />
           </div>
