--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
                   class="form-control"
                   id="floatingInput"
                   placeholder="Vārds"
+                  pattern="[A-Za-z]"
                   required
                 />
                 <label for="floatingInput">Vārds</label>
