--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                   required
                 />
                 <label for="floatingInput">Vārds</label>
-                <div class="invalid-feedback">Lūdzu ievadiet savu vārdu.</div>
+                <div class="invalid-feedback">Lūdzu ievadiet savu vārdu. (A-Za-z)</div>
               </div>
               <div class="form-floating mb-3">
                 <input
