--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                 />
                 <label for="floatingInput">E-pasts</label>
                 <div class="invalid-feedback">
-                  Lūdzu ievadiet savu e-pasta adresi.
+                  Lūdzu ievadiet savu e-pasta adresi. (name@example.com)
                 </div>
               </div>
               <div class="form-floating mb-3">
