--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                   required
                 />
                 <label for="floatingInput">Vārds</label>
-                <div class="invalid-feedback">Lūdzu ievadiet savu vārdu. (A-Za-z)</div>
+                <div class="invalid-feedback">Ievadiet savu vārdu. (A-Za-z)</div>
               </div>
               <div class="form-floating mb-3">
                 <input
@@ -347,7 +347,7 @@
                 />
                 <label for="floatingInput">E-pasts</label>
                 <div class="invalid-feedback">
-                  Lūdzu ievadiet savu e-pasta adresi. (name@example.com)
+                  Ievadiet savu e-pasta adresi. (name@example.com)
                 </div>
               </div>
               <div class="form-floating mb-3">
@@ -362,7 +362,7 @@
                 ></textarea>
                 <label for="floatingTextarea2">Komentārs</label>
                 <div class="invalid-feedback">
-                  Lūdzu ievadiet savu komentāru.
+                  Ievadiet savu komentāru.
                 </div>
               </div>
               
